--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["hrsma2i <hrs.ma2i@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 kaggle = "^1.5.12"
+Pillow = "^8.1.2"
+segmentation = {git = "https://github.com/hrsma2i/segmentation.git", rev = "main"}
 
 [tool.poetry.dev-dependencies]
 numpy = "^1.20.1"
