Fix dependencies segutil (segmentation) must be an older version I didn't change "segmentation" to "segutil" because it causes an error when run `poetry update`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ authors = ["hrsma2i <hrs.ma2i@gmail.com>"]
 python = "^3.7.1"
 kaggle = "^1.5.12"
 Pillow = "^8.1.2"
-segmentation = {git = "https://github.com/hrsma2i/segmentation.git", rev = "main"}
+segmentation = {git = "https://github.com/hrsma2i/segmentation.git", rev = "cfc1670021"}
 typer = "^0.3.2"
+pycocotools = "^2.0.4"
 
 [tool.poetry.dev-dependencies]
 numpy = "^1.20.1"
